--- a/Elliot/inicio.html
+++ b/Elliot/inicio.html
@@ -50,7 +50,7 @@
         </div>
 
         <span class="login">
-      <a href="login.html"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px;"></a>
+      <a href="portal-usuario.php"><img src="Resources/Images/user_50px.png" width="30px" style="margin-right: 30px;"></a>
       <a href="contacto.html">        
         <img src="Resources/Images/phone_50px.png" width="30px" /></a>
     </span>
@@ -291,7 +291,7 @@
 
                 <!--Grid column-->
                 <div class="col-8" style="margin-top:50px; ">
-                    <h5 class="text-uppercase mb-0">Inoformación de contacto</h5><br><br>
+                    <h5 class="text-uppercase mb-0">Información de contacto</h5><br><br>
 
                     <ul class="list-unstyled">
                         <li>
