--- a/Elliot/login.html
+++ b/Elliot/login.html
@@ -49,12 +49,12 @@
                         border-bottom-color: #315254;
                         border-left-color: #315254;
                     ">
-                        <a class="nav-link" href="productos.html"  id="texto-botones">
+                        <a class="nav-link" href="productos.html" id="texto-botones">
                             Productos
                         </a>
                     </li>
                     <li class="nav-item" style="padding-left: 40px">
-                        <a class="nav-link" href="planes.html"  id="texto-botones">Planes</a>
+                        <a class="nav-link" href="planes.html" id="texto-botones">Planes</a>
                     </li>
                 </ul>
             </div>
@@ -71,7 +71,7 @@
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-9 col-lg-6 col-xl-5">
-                    <img src="Resources/Images/Grupo 36.png" class="img-fluid" alt="Sample image" style="max-width: 60%"/>
+                    <img src="Resources/Images/Grupo 36.png" class="img-fluid" alt="Sample image" style="max-width: 60%" />
                 </div>
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                     <form id="formLogin" method="POST">
@@ -93,13 +93,6 @@
                         </div>
 
                         <div class="d-flex justify-content-between align-items-center">
-                            <!-- Checkbox -->
-                            <div class="form-check mb-0">
-                                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3">
-                                <label class="form-check-label" for="form2Example3">
-                                    Recordar credenciales
-                                </label>
-                            </div>
                             <a href="recuperarMiCuenta.html" class="text-body">Olvidé mis Credenciales</a>
                         </div>
 
@@ -146,7 +139,7 @@
 
                 <!--Grid column-->
                 <div class="col-8" style="margin-top: 50px">
-                    <h5 class="text-uppercase mb-0">Inoformación de contacto</h5>
+                    <h5 class="text-uppercase mb-0">Información de contacto</h5>
                     <br /><br />
 
                     <ul class="list-unstyled">
