--- a/Elliot/quienes-somos.html
+++ b/Elliot/quienes-somos.html
@@ -9,11 +9,8 @@
     <title>Registrarte en Elliot</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/estilo-main.css" />
     <link rel="stylesheet" href="CSS/estilos-login.css" />
     <link rel="stylesheet" href="CSS/estilos-signup.css" />
@@ -30,9 +27,7 @@
                 <p class="texto-logo">ELLIOT TECH</p>
             </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,13 +48,12 @@
                         border-bottom-color: #315254;
                         border-left-color: #315254;
                     ">
-                        <a class="nav-link" href="productos.html" 
-                            id="texto-botones">
+                        <a class="nav-link" href="productos.html" id="texto-botones">
                             Productos
                         </a>
                     </li>
                     <li class="nav-item" style="padding-left: 40px">
-                        <a class="nav-link" href="planes.html"  id="texto-botones">Planes</a>
+                        <a class="nav-link" href="planes.html" id="texto-botones">Planes</a>
                     </li>
                 </ul>
             </div>
@@ -76,8 +70,7 @@
     <!------------->
     <!-- LANDING -->
     <!------------->
-    <div
-        style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(Resources/Images/pexels-fauxels-3184418.jpg);  background-size: cover; background-position:center; min-height: 300px; display: flex; align-items: center; justify-content: center;">
+    <div style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(Resources/Images/pexels-fauxels-3184418.jpg);  background-size: cover; background-position:center; min-height: 300px; display: flex; align-items: center; justify-content: center;">
         <h2 style="color: #fff;">¿Quiénes somos?</h2>
     </div>
 
@@ -94,21 +87,12 @@
             </div>
 
             <div class="col-8">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis viverra tortor, sit amet
-                    vehicula lorem suscipit at. Maecenas iaculis molestie laoreet. Aenean lacinia convallis euismod.
-                    Praesent id ligula in turpis fermentum vehicula. Nullam ut convallis eros, at scelerisque sem.
-                    Integer nisl ante, aliquet sed interdum nec, dictum sed est. Ut viverra sapien quis risus dignissim
-                    facilisis. Maecenas finibus volutpat laoreet. In hac habitasse platea dictumst. Aliquam bibendum sit
-                    amet nisi et facilisis. Sed augue turpis, tincidunt eget sem quis, convallis ullamcorper ligula.
-                    Vestibulum libero massa, molestie id viverra nec, rutrum vitae massa.<br><br>
-
-                    Aliquam rhoncus vulputate efficitur. Sed feugiat orci vel pretium pharetra. Aenean in egestas mi. In
-                    tincidunt lorem quis dui molestie, nec venenatis risus vestibulum. Phasellus vestibulum dictum
-                    metus, vitae condimentum lectus pharetra euismod. In ipsum ex, congue ac lectus eu, hendrerit
-                    rhoncus odio. Duis id enim non massa ultricies commodo a ut ante. Nam et turpis pharetra enim tempus
-                    facilisis sit amet sit amet lorem. Maecenas nec elit quam. Curabitur egestas diam a justo tristique,
-                    vitae imperdiet nisi hendrerit. Donec tincidunt elit ultrices arcu ultricies, ut dictum enim
-                    ullamcorper. Suspendisse potenti.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis viverra tortor, sit amet vehicula lorem suscipit at. Maecenas iaculis molestie laoreet. Aenean lacinia convallis euismod. Praesent id ligula in turpis fermentum vehicula.
+                    Nullam ut convallis eros, at scelerisque sem. Integer nisl ante, aliquet sed interdum nec, dictum sed est. Ut viverra sapien quis risus dignissim facilisis. Maecenas finibus volutpat laoreet. In hac habitasse platea dictumst. Aliquam
+                    bibendum sit amet nisi et facilisis. Sed augue turpis, tincidunt eget sem quis, convallis ullamcorper ligula. Vestibulum libero massa, molestie id viverra nec, rutrum vitae massa.<br><br> Aliquam rhoncus vulputate efficitur. Sed feugiat
+                    orci vel pretium pharetra. Aenean in egestas mi. In tincidunt lorem quis dui molestie, nec venenatis risus vestibulum. Phasellus vestibulum dictum metus, vitae condimentum lectus pharetra euismod. In ipsum ex, congue ac lectus eu,
+                    hendrerit rhoncus odio. Duis id enim non massa ultricies commodo a ut ante. Nam et turpis pharetra enim tempus facilisis sit amet sit amet lorem. Maecenas nec elit quam. Curabitur egestas diam a justo tristique, vitae imperdiet nisi
+                    hendrerit. Donec tincidunt elit ultrices arcu ultricies, ut dictum enim ullamcorper. Suspendisse potenti.</p>
             </div>
         </div>
     </div>
@@ -119,7 +103,9 @@
         </h1>
     </div>
 
-    <center><hr style="width:20%; height: 3px; background-color:#000; margin-top: 50px; margin-bottom: 50px;"></center>
+    <center>
+        <hr style="width:20%; height: 3px; background-color:#000; margin-top: 50px; margin-bottom: 50px;">
+    </center>
 
     <div class="container" style="margin-top:50px; margin-bottom:80px; ">
         <div class="row">
@@ -161,8 +147,7 @@
             <div class="row ">
                 <!--Grid column-->
                 <div class="col-4 ">
-                    <img src="Resources/Images/Grupo 35.png " width="40% "
-                        style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
+                    <img src="Resources/Images/Grupo 35.png " width="40% " style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
                     <ul class="list-unstyled mb-0 ">
                         <li><a href="#! " class=" ">Inicio</a><br /></li>
                         <li><a href="#! " class=" ">¿Quiénes Somos?</a><br /></li>
@@ -174,7 +159,7 @@
 
                 <!--Grid column-->
                 <div class="col-8 " style="margin-top: 50px ">
-                    <h5 class="text-uppercase mb-0 ">Inoformación de contacto</h5>
+                    <h5 class="text-uppercase mb-0 ">Información de contacto</h5>
                     <br /><br />
 
                     <ul class="list-unstyled ">
