--- a/Elliot/recuperarMiCuenta.html
+++ b/Elliot/recuperarMiCuenta.html
@@ -128,7 +128,7 @@
 
                 <!--Grid column-->
                 <div class="col-8" style="margin-top: 50px">
-                    <h5 class="text-uppercase mb-0">Inoformación de contacto</h5>
+                    <h5 class="text-uppercase mb-0">Información de contacto</h5>
                     <br /><br />
 
                     <ul class="list-unstyled">
