--- a/Elliot/planes.html
+++ b/Elliot/planes.html
@@ -9,11 +9,8 @@
     <title>Registrarte en Elliot</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/estilo-main.css" />
     <link rel="stylesheet" href="CSS/estilos-login.css" />
     <link rel="stylesheet" href="CSS/estilos-signup.css" />
@@ -30,9 +27,7 @@
                 <p class="texto-logo">ELLIOT TECH</p>
             </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -58,8 +53,7 @@
                         </a>
                     </li>
                     <li class="nav-item" style="padding-left: 40px">
-                        <a class="nav-link" href="planes.html" tabindex="-1" aria-disabled="true"
-                            id="texto-botones">Planes</a>
+                        <a class="nav-link" href="planes.html" tabindex="-1" aria-disabled="true" id="texto-botones">Planes</a>
                     </li>
                 </ul>
             </div>
@@ -76,8 +70,7 @@
     <!------------->
     <!-- LANDING -->
     <!------------->
-    <div
-        style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/Images/pexels-burak-kebaber-186461.jpg);  background-size: cover; background-position:center; min-height: 300px; display: flex; align-items: center; justify-content: center;">
+    <div style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/Images/pexels-burak-kebaber-186461.jpg);  background-size: cover; background-position:center; min-height: 300px; display: flex; align-items: center; justify-content: center;">
         <h2 style="color: #fff;">Planes</h2>
     </div>
 
@@ -90,87 +83,87 @@
 
     <section class="pricing py-5">
         <div class="container">
-          <div class="row">
-            <!-- Free Tier -->
-            <div class="col-lg-4">
-              <div class="card mb-5 mb-lg-0">
-                <div class="card-body">
-                  <h5 class="card-title text-muted text-uppercase text-center">Gratuito</h5>
-                  <h6 class="card-price text-center">$0<span class="period">/mes</span></h6>
-                  <hr>
-                  <ul class="fa-ul">
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span><b>Usuario único</b></li>
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span>5 cámaras</li>
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span>1 relé</li>
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span>1 sensor</li>
-                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Cámaras ilimitadas</li>
-                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de relés 
-                    </li>
-                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de sensores
-                    </li>
-                  </ul>
-                  <div class="d-grid">
-                    <a href="#" class="btn text-uppercase">Comprar</a>
-                  </div>
+            <div class="row">
+                <!-- Free Tier -->
+                <div class="col-lg-4">
+                    <div class="card mb-5 mb-lg-0">
+                        <div class="card-body">
+                            <h5 class="card-title text-muted text-uppercase text-center">Gratuito</h5>
+                            <h6 class="card-price text-center">$0<span class="period">/mes</span></h6>
+                            <hr>
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span><b>Usuario único</b></li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>5 cámaras</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>1 relé</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>1 sensor</li>
+                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Cámaras ilimitadas</li>
+                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de relés
+                                </li>
+                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de sensores
+                                </li>
+                            </ul>
+                            <div class="d-grid">
+                                <a href="#" class="btn text-uppercase">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
-            <!-- Plus Tier -->
-            <div class="col-lg-4">
-              <div class="card mb-5 mb-lg-0">
-                <div class="card-body">
-                  <h5 class="card-title text-muted text-uppercase text-center">Plus</h5>
-                  <h6 class="card-price text-center">$50.000<span class="period">/mes</span></h6>
-                  <hr>
-                  <ul class="fa-ul">
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span><b>5 usuarios por plan</b></li>
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span><b>15</b> cámaras</li>
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span><b>10</b> relés</li>
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span><b>10</b> sensores</li>
-                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Cámaras ilimitadas</li>
-                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de relés 
-                    </li>
-                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de sensores
-                    </li>
-                  </ul>
-                  <div class="d-grid">
-                    <a href="#" class="btn text-uppercase">Comprar</a>
-                  </div>
+                <!-- Plus Tier -->
+                <div class="col-lg-4">
+                    <div class="card mb-5 mb-lg-0">
+                        <div class="card-body">
+                            <h5 class="card-title text-muted text-uppercase text-center">Plus</h5>
+                            <h6 class="card-price text-center">$50.000<span class="period">/mes</span></h6>
+                            <hr>
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span><b>5 usuarios por plan</b></li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span><b>15</b> cámaras</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span><b>10</b> relés</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span><b>10</b> sensores</li>
+                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Cámaras ilimitadas</li>
+                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de relés
+                                </li>
+                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de sensores
+                                </li>
+                            </ul>
+                            <div class="d-grid">
+                                <a href="#" class="btn text-uppercase">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
-            <!-- Pro Tier -->
-            <div class="col-lg-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title text-muted text-uppercase text-center">Pro</h5>
-                  <h6 class="card-price text-center">$150.000<span class="period">/mes</span></h6>
-                  <hr>
-                  <ul class="fa-ul">
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span><b>10 usuarios por plan</b></li>
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span><b>30</b> cámaras</li>
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span><b>20</b> relés</li>
-                    <li><span class="fa-li"><i class="fas fa-check"></i></span><b>20</b> sensores</li>                   
-                    <li class="fa-li"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de relés 
-                    </li>
-                    <li class="fa-li"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de sensores
-                    </li>
-                    <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Cámaras ilimitadas</li>
-                  </ul>
-                  <div class="d-grid">
-                    <a href="#" class="btn text-uppercase">Comprar</a>
-                  </div>
+                <!-- Pro Tier -->
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title text-muted text-uppercase text-center">Pro</h5>
+                            <h6 class="card-price text-center">$150.000<span class="period">/mes</span></h6>
+                            <hr>
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span><b>10 usuarios por plan</b></li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span><b>30</b> cámaras</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span><b>20</b> relés</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span><b>20</b> sensores</li>
+                                <li class="fa-li"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de relés
+                                </li>
+                                <li class="fa-li"><span class="fa-li"><i class="fas fa-times"></i></span>Modificaciones a reglas de sensores
+                                </li>
+                                <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Cámaras ilimitadas</li>
+                            </ul>
+                            <div class="d-grid">
+                                <a href="#" class="btn text-uppercase">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-      </section>
+    </section>
 
-    <center>  
-    <p style="margin-top: 50px; margin-top: 50px;">
-        <b>¿Necesita un plan personalizado? <a href="#">Contáctenos</a></b>
-    </p>
+    <center>
+        <p style="margin-top: 50px; margin-top: 50px;">
+            <b>¿Necesita un plan personalizado? <a href="#">Contáctenos</a></b>
+        </p>
     </center>
 
 
@@ -185,8 +178,7 @@
             <div class="row ">
                 <!--Grid column-->
                 <div class="col-4 ">
-                    <img src="Resources/Images/Grupo 35.png " width="40% "
-                        style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
+                    <img src="Resources/Images/Grupo 35.png " width="40% " style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
                     <ul class="list-unstyled mb-0 ">
                         <li><a href="#! " class=" ">Inicio</a><br /></li>
                         <li><a href="#! " class=" ">¿Quiénes Somos?</a><br /></li>
@@ -198,7 +190,7 @@
 
                 <!--Grid column-->
                 <div class="col-8 " style="margin-top: 50px ">
-                    <h5 class="text-uppercase mb-0 ">Inoformación de contacto</h5>
+                    <h5 class="text-uppercase mb-0 ">Información de contacto</h5>
                     <br /><br />
 
                     <ul class="list-unstyled ">
