--- a/Elliot/productos.html
+++ b/Elliot/productos.html
@@ -9,11 +9,8 @@
     <title>Registrarte en Elliot</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/estilo-main.css" />
     <link rel="stylesheet" href="CSS/estilos-login.css" />
     <link rel="stylesheet" href="CSS/estilos-signup.css" />
@@ -30,9 +27,7 @@
                 <p class="texto-logo">ELLIOT TECH</p>
             </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,8 +48,7 @@
                         border-bottom-color: #315254;
                         border-left-color: #315254;
                     ">
-                        <a class="nav-link" href="productos.html" 
-                            id="texto-botones">
+                        <a class="nav-link" href="productos.html" id="texto-botones">
                             Productos
                         </a>
                     </li>
@@ -76,14 +70,13 @@
     <!------------->
     <!-- LANDING -->
     <!------------->
-    <div
-        style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/Images/pexels-jorge-jesus-614117.jpg);  background-size: cover; background-position:center; min-height: 300px; display: flex; align-items: center; justify-content: center;">
+    <div style="background:linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/Images/pexels-jorge-jesus-614117.jpg);  background-size: cover; background-position:center; min-height: 300px; display: flex; align-items: center; justify-content: center;">
         <h2 style="color: #fff;">Servicios</h2>
     </div>
 
     <div class="container">
         <div class="row" style="margin-top: 80px; margin-bottom: 90px;">
-            <div class="col-6" >
+            <div class="col-6">
                 <hr style="width:30%; height: 3px; background-color:#315254;">
                 <h1>
                     PROTEGE TU<br>DÍA A DÍA
@@ -92,17 +85,13 @@
                     <b>¿Qué ofrecemos?</b>
                 </p>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis viverra tortor, sit amet
-                    vehicula lorem suscipit at. Maecenas iaculis molestie laoreet. Aenean lacinia convallis euismod.
-                    Praesent id ligula in turpis fermentum vehicula. Nullam ut convallis eros, at scelerisque sem.
-                    Integer nisl ante, aliquet sed interdum nec, dictum sed est. Ut viverra sapien quis risus dignissim
-                    facilisis. Maecenas finibus volutpat laoreet. In hac habitasse platea dictumst. Aliquam bibendum sit
-                    amet nisi et facilisis. Sed augue turpis, tincidunt eget sem quis, convallis ullamcorper ligula.
-                    Vestibulum libero massa, molestie id viverra nec, rutrum vitae massa.<br><br></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis viverra tortor, sit amet vehicula lorem suscipit at. Maecenas iaculis molestie laoreet. Aenean lacinia convallis euismod. Praesent id ligula in turpis fermentum vehicula.
+                    Nullam ut convallis eros, at scelerisque sem. Integer nisl ante, aliquet sed interdum nec, dictum sed est. Ut viverra sapien quis risus dignissim facilisis. Maecenas finibus volutpat laoreet. In hac habitasse platea dictumst. Aliquam
+                    bibendum sit amet nisi et facilisis. Sed augue turpis, tincidunt eget sem quis, convallis ullamcorper ligula. Vestibulum libero massa, molestie id viverra nec, rutrum vitae massa.<br><br></p>
             </div>
 
             <div class="col-6" style="display: flex; align-items: center;">
-                <img src="Resources/Images/Diseño sin título.png" class="img-fluid"  />
+                <img src="Resources/Images/Diseño sin título.png" class="img-fluid" />
             </div>
         </div>
     </div>
@@ -117,31 +106,33 @@
         <div class="row">
             <div class="card-group">
                 <div class="card">
-                  <img class="card-img-top" src="Resources/Images/pexels-atypeek-dgn-5966513.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">CCTV</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
+                    <img class="card-img-top" src="Resources/Images/pexels-atypeek-dgn-5966513.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">CCTV</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
                 </div>
                 <div class="card" style="margin-left: 30px; margin-right: 30px;">
-                  <img class="card-img-top" src="Resources/Images/619vFeWASgL._SL1500_.jpg" alt="Card image cap" style="height:42%; object-fit: cover; object-position: 80% 80;">
-                  <div class="card-body">
-                    <h5 class="card-title">Reles</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
+                    <img class="card-img-top" src="Resources/Images/619vFeWASgL._SL1500_.jpg" alt="Card image cap" style="height:42%; object-fit: cover; object-position: 80% 80;">
+                    <div class="card-body">
+                        <h5 class="card-title">Reles</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
                 </div>
                 <div class="card">
-                  <img class="card-img-top" src="Resources/Images/68641-15343708.jpg" alt="Card image cap" style="height:42%; object-fit: cover; object-position: 80% 80;">
-                  <div class="card-body">
-                    <h5 class="card-title">Sensores</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
+                    <img class="card-img-top" src="Resources/Images/68641-15343708.jpg" alt="Card image cap" style="height:42%; object-fit: cover; object-position: 80% 80;">
+                    <div class="card-body">
+                        <h5 class="card-title">Sensores</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
                 </div>
-      </div></div></div>
-    
+            </div>
+        </div>
+    </div>
+
 
     <!------------->
     <!-- LANDING -->
@@ -154,8 +145,7 @@
             <div class="row ">
                 <!--Grid column-->
                 <div class="col-4 ">
-                    <img src="Resources/Images/Grupo 35.png " width="40% "
-                        style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
+                    <img src="Resources/Images/Grupo 35.png " width="40% " style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
                     <ul class="list-unstyled mb-0 ">
                         <li><a href="#! " class=" ">Inicio</a><br /></li>
                         <li><a href="#! " class=" ">¿Quiénes Somos?</a><br /></li>
@@ -167,7 +157,7 @@
 
                 <!--Grid column-->
                 <div class="col-8 " style="margin-top: 50px ">
-                    <h5 class="text-uppercase mb-0 ">Inoformación de contacto</h5>
+                    <h5 class="text-uppercase mb-0 ">Información de contacto</h5>
                     <br /><br />
 
                     <ul class="list-unstyled ">
