--- a/Elliot/signup.html
+++ b/Elliot/signup.html
@@ -96,12 +96,6 @@
                             <label class="form-label" for="email">Email</label>
                         </div>
 
-                        <!-- confirm Email input -->
-                        <div class="form-outline mb-4">
-                            <input type="text" name="confirm-email" id="confirm-email" class="form-control form-control-lg" placeholder="Confirme su Email" />
-                            <label class="form-label" for="confirm-email">Confirme su Email</label>
-                        </div>
-
                         <!-- Username input -->
                         <div class="form-outline mb-4">
                             <input type="text" name="username" id="username" class="form-control form-control-lg" placeholder="Ingrese su Usuario" />
@@ -112,16 +106,17 @@
                         <div class="form-outline mb-3">
                             <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Ingrese su Contraseña" />
                             <label class="form-label" for="confirm-password">Contraseña</label>
-                            <label class="form-label" for="confirm-password">
-                                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-                            </label>
+                            <p>
+                                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.</label>
+                            </p>
                         </div>
 
-                        <!-- confirm Password input -->
-                        <div class="form-outline mb-3 ">
+                        <!--confirm  Password input -->
+                        <div class="form-outline mb-3">
                             <input type="password " name="confirm-password " id="confirm-password " class="form-control form-control-lg " placeholder="Confirme su Contraseña " />
                             <label class="form-label " for="confirm-password ">Confirme su Contraseña</label>
                         </div>
+
 
                         <div class="d-flex justify-content-between align-items-center ">
                             <p>Al hacer clic en Registrarte, aceptas las Condiciones, la Política de datos y la Política de cookies. Es posible que te enviemos notificaciones por correo.</p>
@@ -154,10 +149,10 @@
                 <div class="col-4 ">
                     <img src="Resources/Images/Grupo 35.png " width="40% " style="float: right; margin-top: 50px; float: left " /><br /><br /><br /><br /><br /><br />
                     <ul class="list-unstyled mb-0 ">
-                        <li><a href="#! " class=" ">Inicio</a><br /></li>
-                        <li><a href="#! " class=" ">¿Quiénes Somos?</a><br /></li>
-                        <li><a href="#! " class=" ">Productos</a><br /></li>
-                        <li><a href="#! " class=" ">Planes</a><br /></li>
+                        <li><a href="inicio.html" class=" ">Inicio</a><br /></li>
+                        <li><a href="quienes-somos.html" class=" ">¿Quiénes Somos?</a><br /></li>
+                        <li><a href="productos.html" class=" ">Productos</a><br /></li>
+                        <li><a href="planes.html" class=" ">Planes</a><br /></li>
                     </ul>
                 </div>
                 <!--Grid column-->
