--- a/Elliot/planes.html
+++ b/Elliot/planes.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="Resources/Images/Grupo 24.png" />
-    <title>Registrarte en Elliot</title>
+    <title>Elliot</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
@@ -160,11 +160,15 @@
         </div>
     </section>
 
-    <center>
-        <p style="margin-top: 50px; margin-top: 50px;">
-            <b>¿Necesita un plan personalizado? <a href="#">Contáctenos</a></b>
-        </p>
-    </center>
+    <div>
+        <center>
+            <p style="margin-top: 50px; margin-top: 50px;">
+                <b>¿Necesita un plan personalizado? <a href="contacto.html">Contáctenos</a></b>
+                <br>
+                <br>
+            </p>
+        </center>
+    </div>
 
 
     <!------------->
