Quienes somos , ya hau direccionamiento desde la pagina principal a las pagina sestaticas , boton de ayuda va a conatctenos

--- a/Elliot/prueba-portal.html
+++ b/Elliot/prueba-portal.html
@@ -36,7 +36,7 @@
                         <a class="nav-link active" aria-current="page" href="inicio.html" id="texto-botones">Inicio</a>
                     </li>
                     <li class="nav-item" id="nav-item-linea" style="padding-left: 40px">
-                        <a class="nav-link" href="#" id="texto-botones">¿Quiénes somos?</a>
+                        <a class="nav-link" href="quienes-somos.html" id="texto-botones">¿Quiénes somos?</a>
                     </li>
                     <li class="nav-item" style="
                         padding-right: 40px;
@@ -48,12 +48,11 @@
                         border-bottom-color: #315254;
                         border-left-color: #315254;
                     ">
-                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="texto-botones">
-                            Productos
-                        </a>
+                        <a class="nav-link" href="productos.html" tabindex="-1" aria-disabled="true" id="texto-botones">Productos</a>                     
                     </li>
+                   
                     <li class="nav-item" style="padding-left: 40px">
-                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true" id="texto-botones">Planes</a>
+                        <a class="nav-link" href="planes.html" tabindex="-1" aria-disabled="true" id="texto-botones">Planes</a>
                     </li>
                 </ul>
             </div>
@@ -62,7 +61,8 @@
         <span class="login">
             <a href="portal-usuario.php"><img src="Resources/Images/user_50px.png" width="30px"
                     style="margin-right: 30px" /></a>
-            <img src="Resources/Images/phone_50px.png" width="30px" />
+                    <a href="contacto.html">        
+                        <img src="Resources/Images/phone_50px.png" width="30px" /></a>
         </span>
     </nav>
 
@@ -103,7 +103,7 @@
                         </li>
                         <div class="divider d-flex align-items-center my-4"></div>
                         <li class="nav-item" style=" margin-bottom: 30px; margin-left: 10px;">
-                            <a class="nav-link active" id="texto-botones" data-bs-toggle="collapse" href="" aria-controls="" data-bs-parent="#myGroup" aria-expanded="false">Ayuda</a>
+                            <a class="nav-link" href="contacto.html" tabindex="-1" aria-disabled="true" id="texto-botones">Ayuda</a>
                         </li>
                     </ul>
                 </div>
