--- a/Elliot/quienes-somos.html
+++ b/Elliot/quienes-somos.html
@@ -87,12 +87,11 @@
             </div>
 
             <div class="col-8">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis viverra tortor, sit amet vehicula lorem suscipit at. Maecenas iaculis molestie laoreet. Aenean lacinia convallis euismod. Praesent id ligula in turpis fermentum vehicula.
-                    Nullam ut convallis eros, at scelerisque sem. Integer nisl ante, aliquet sed interdum nec, dictum sed est. Ut viverra sapien quis risus dignissim facilisis. Maecenas finibus volutpat laoreet. In hac habitasse platea dictumst. Aliquam
-                    bibendum sit amet nisi et facilisis. Sed augue turpis, tincidunt eget sem quis, convallis ullamcorper ligula. Vestibulum libero massa, molestie id viverra nec, rutrum vitae massa.<br><br> Aliquam rhoncus vulputate efficitur. Sed feugiat
-                    orci vel pretium pharetra. Aenean in egestas mi. In tincidunt lorem quis dui molestie, nec venenatis risus vestibulum. Phasellus vestibulum dictum metus, vitae condimentum lectus pharetra euismod. In ipsum ex, congue ac lectus eu,
-                    hendrerit rhoncus odio. Duis id enim non massa ultricies commodo a ut ante. Nam et turpis pharetra enim tempus facilisis sit amet sit amet lorem. Maecenas nec elit quam. Curabitur egestas diam a justo tristique, vitae imperdiet nisi
-                    hendrerit. Donec tincidunt elit ultrices arcu ultricies, ut dictum enim ullamcorper. Suspendisse potenti.</p>
+                <p>Eliot es una iniciativa digital que ofrece a sus usuarios servicios de seguridad y monitoreo de actualización continua.<br><br>
+                    Somos un equipo que reconoce la importancia de la seguridad para las organizaciones y usuarios, que pretende dar un servicios
+                    de facil acceso y uso, con el proposito de que todo aquel que quiera invertir en seguridad, pueda hacerlo de forma facil y eficiente.
+                    <br> <br>Eliot es un sistema desde el cual usted podra administrar sus camaras, switches y sensores de forma remota y desde el cual podrá
+                    obtener datos en tiempo real de los mismos para poder estar siempre al tanto de la seguridad de sus espacios.</p>
             </div>
         </div>
     </div>
