Productos estatica // quienes somos completado

--- a/Elliot/productos.html
+++ b/Elliot/productos.html
@@ -85,9 +85,9 @@
                     <b>¿Qué ofrecemos?</b>
                 </p>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis viverra tortor, sit amet vehicula lorem suscipit at. Maecenas iaculis molestie laoreet. Aenean lacinia convallis euismod. Praesent id ligula in turpis fermentum vehicula.
-                    Nullam ut convallis eros, at scelerisque sem. Integer nisl ante, aliquet sed interdum nec, dictum sed est. Ut viverra sapien quis risus dignissim facilisis. Maecenas finibus volutpat laoreet. In hac habitasse platea dictumst. Aliquam
-                    bibendum sit amet nisi et facilisis. Sed augue turpis, tincidunt eget sem quis, convallis ullamcorper ligula. Vestibulum libero massa, molestie id viverra nec, rutrum vitae massa.<br><br></p>
+                <p>Ofrecemos circuitos cerrados de televisión, que le permitirán estar al tanto de la seguridad de sus espacios 
+                    de forma remota y con actualizaciones constantes.<br><br>Nuestros sistemas permiten el monitoreo e integración de 
+                camaras, reles y sensores, lo que le permitira tener 3 formas diferentes de recolección de información para su monitoreo.</p>
             </div>
 
             <div class="col-6" style="display: flex; align-items: center;">
@@ -109,23 +109,23 @@
                     <img class="card-img-top" src="Resources/Images/pexels-atypeek-dgn-5966513.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">CCTV</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Es una instalación de equipos conectados que generan un circuito de imágenes que solo puede ser visto por un grupo determinado de personas, estas se personalizan para adaptarse a las necesidades de cada cliente bien sean orientadas a la seguridad, vigilancia o mejora de servicio. </p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
                 <div class="card" style="margin-left: 30px; margin-right: 30px;">
                     <img class="card-img-top" src="Resources/Images/619vFeWASgL._SL1500_.jpg" alt="Card image cap" style="height:42%; object-fit: cover; object-position: 80% 80;">
                     <div class="card-body">
-                        <h5 class="card-title">Reles</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <h5 class="card-title">Relé</h5>
+                        <p class="card-text">Es un dispositivo electromagnético. Funciona como un interruptor controlado por un circuito eléctrico en el que, por medio de una bobina y un electroimán, se acciona un juego de uno o varios contactos que permiten abrir o cerrar otros circuitos eléctricos independientes.</p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
                 <div class="card">
                     <img class="card-img-top" src="Resources/Images/68641-15343708.jpg" alt="Card image cap" style="height:42%; object-fit: cover; object-position: 80% 80;">
                     <div class="card-body">
-                        <h5 class="card-title">Sensores</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <h5 class="card-title">Sensor</h5>
+                        <p class="card-text">Es un dispositivo que detecta el cambio en el entorno y responde a alguna salida en el otro sistema. Un sensor convierte un fenómeno físico en un voltaje analógico medible (o, a veces, una señal digital) convertido en una pantalla legible para humanos o transmitida para lectura o procesamiento adicional.</p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
