--- a/Elliot/quienes-somos.html
+++ b/Elliot/quienes-somos.html
@@ -110,25 +110,49 @@
         <div class="row">
             <div class="col-4">
                 <center>
-                    <img src="Resources/Images/pexels-andrea-piacquadio-3789888.jpg" width="30%" style="border-radius: 50%; margin-bottom: 20px;">
-                    <p><b>Lorem Ipsum</b></p>
-                    <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. ut nec leo id tellus dignissim gravida nec eu libero. class aptent taciti sociosqu ad litora torquent
+                    <p><b>Cristian Camilo Vargas Morales</b></p>
+                    <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
+                        <br><br>crvargasm@unal.edu.co
                     </p>
                 </center>
             </div>
             <div class="col-4">
-                <center>
-                    <img src="Resources/Images/pexels-kindel-media-7298680.jpg" width="30%" style="border-radius: 50%; margin-bottom: 20px;">
-                    <p><b>Lorem Ipsum</b></p>
-                    <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. ut nec leo id tellus dignissim gravida nec eu libero. class aptent taciti sociosqu ad litora torquent
+                <center>                    
+                    <p><b>Zamir Velasquez Beltran</b></p>
+                    <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
+                        <br><br>zvelasquezb@unal.edu.co
                     </p>
                 </center>
             </div>
             <div class="col-4">
-                <center>
-                    <img src="Resources/Images/pexels-andrea-piacquadio-3777570.jpg" width="30%" style="border-radius: 50%; margin-bottom: 20px;">
-                    <p><b>Lorem Ipsum</b></p>
-                    <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. ut nec leo id tellus dignissim gravida nec eu libero. class aptent taciti sociosqu ad litora torquent
+                <center>                    
+                    <p><b>Andres David Ortega Lobo</b></p>
+                    <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
+                        <br><br>aortegal@unal.edu.co
+                    </p>
+                </center>
+            </div>
+            <div class="col-4">
+                <center>                   
+                    <p><b>Nicolas Dario Mejia Borda</b></p>
+                    <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
+                        <br><br>nmejiab@unal.edu.co
+                    </p>
+                </center>
+            </div>
+            <div class="col-4">
+                <center>                    
+                    <p><b>Ivonne Nathalia Uribe Lara</b></p>
+                    <p>Estudiante de Ing. de sistemas en la UNAL de Colombia.
+                        <br><br>iuribel@unal.edu.co
+                    </p>
+                </center>
+            </div>
+            <div class="col-4">
+                <center>                    
+                    <p><b>Hernando Rodriguez Gonzales</b></p>
+                    <p>Profesor/ tutor de desarrollo.
+                        <br><br>herrodriguezg@unal.edu.co
                     </p>
                 </center>
             </div>
