--- a/Elliot/quienes-somos.html
+++ b/Elliot/quienes-somos.html
@@ -19,6 +19,20 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+
 <body>
     <nav class="navbar sticky-top navbar-expand-lg" style="background: #315254; min-height: 120px">
         <div class="container-fluid">
@@ -87,10 +101,10 @@
             </div>
 
             <div class="col-8">
-                <p>Eliot es una iniciativa digital que ofrece a sus usuarios servicios de seguridad y monitoreo de actualización continua.<br><br>
+                <p>Elliot es una iniciativa digital que ofrece a sus usuarios servicios de seguridad y monitoreo de actualización continua.<br><br>
                     Somos un equipo que reconoce la importancia de la seguridad para las organizaciones y usuarios, que pretende dar un servicios
                     de facil acceso y uso, con el proposito de que todo aquel que quiera invertir en seguridad, pueda hacerlo de forma facil y eficiente.
-                    <br> <br>Eliot es un sistema desde el cual usted podra administrar sus camaras, switches y sensores de forma remota y desde el cual podrá
+                    <br> <br>Elliot es un sistema desde el cual usted podra administrar sus camaras, switches y sensores de forma remota y desde el cual podrá
                     obtener datos en tiempo real de los mismos para poder estar siempre al tanto de la seguridad de sus espacios.</p>
             </div>
         </div>
