--- a/Elliot/prueba-portal.html
+++ b/Elliot/prueba-portal.html
@@ -21,17 +21,19 @@
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
+    var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+    (function() {
+        var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/62b7e310b0d10b6f3e795556/1g6f4tuui';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
     })();
-    </script>
-    <!--End of Tawk.to Script-->
+</script>
+<!--End of Tawk.to Script-->
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg" style="background: #315254; min-height: 120px">
@@ -62,9 +64,9 @@
                         border-bottom-color: #315254;
                         border-left-color: #315254;
                     ">
-                        <a class="nav-link" href="productos.html" tabindex="-1" aria-disabled="true" id="texto-botones">Productos</a>                     
+                        <a class="nav-link" href="productos.html" tabindex="-1" aria-disabled="true" id="texto-botones">Productos</a>
                     </li>
-                   
+
                     <li class="nav-item" style="padding-left: 40px">
                         <a class="nav-link" href="planes.html" tabindex="-1" aria-disabled="true" id="texto-botones">Planes</a>
                     </li>
